# py-cordex

./: .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.binder/: environment.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml  linting.yaml  publish-pypi.yaml  release-pypi.yaml  testpypi-release.yaml
ci/requirements/: docs.yml  environment.yml
cordex/: DKRZ.py  ESGF.py  __init__.py  accessor.py  ccrs.py  cf.py  cli.py  cordex.py  crs.py  data.py  dbase.py  domain.py  domain_new.py  esgf_access.py  grid.py  remap.py  shapes.py  skeleton.py  transform.py  tutorial.py  utils.py  variable.py  version.py
cordex/cmor/: __init__.py  cmor.py  config.py  utils.py
cordex/core/: cf.py  config.py  domain.py  transform.py  tutorial.py  utils.py
cordex/core/regions/: __init__.py  _resources.py  germany.py  mask.py
cordex/domains/: Untitled.ipynb  __init__.py  _resources.py
cordex/old/: conventions.py  dataset.py
cordex/plot/: README.md  __init__.py  animation.py  contour.py  grid.py  level_color_label.py  plot.py  projections.py  read_nc.py  stream_vector.py
cordex/preprocessing/: __init__.py  known_issues.py  preprocessing.py
cordex/regions/: __init__.py  _address.py  _germany.py  _prudence.py  _regions.py  _resources.py  germany.py  mask.py  prudence.py
cordex/tables/: __init__.py  _resources.py  _tables.py  domains.csv
cordex/tables/data_request/: __init__.py  cordex-cmip5.csv
cordex/tables/domains/: __init__.py  cordex-core.csv  cordex-fps.csv  cordex-high-res.csv  cordex.csv
docs/: Makefile  api.rst  conf.py  contributing.rst  cordex.plot.rst  cordex.rst  cordex.tables.data_request.rst  cordex.tables.domains.rst  cordex.tables.rst  domains.nblink  examples.rst  index.rst  installation.rst  make.bat  modules.rst  prudence.nblink  science.rst  usage.rst  whats_new.rst
docs/notebooks/: cordex-preprocessing.ipynb  domains.ipynb  esgf.ipynb  introduction.ipynb  mask.ipynb  preprocessing.ipynb  prudence.ipynb  regions.ipynb
examples/: variables.py
examples/convention/: ESGF_convention.py  ESGF_selection.py  convention.py
examples/domain/: domain.py  domain_create_high-res.py  domain_refinement.py
examples/esgf/: access-esgf.py
examples/mask/: mask-example.py  mask.ipynb
examples/plots/: animation_plot.py  contour_plot.py  plot-REMO2015-domains.py  plot-cf.py  plot.py  projections_plot.py  streamvector_plot.py
examples/plots/data/: orog_EUR-11_ECMWF-ERAINT_evaluation_r0i0p0_GERICS-REMO2015_v1_fx.nc  remo_emhh_oro.nc
notebooks/: cmor-dev.ipynb  cordex-preprocessing.ipynb  domains.ipynb  esgf.ipynb  mask.ipynb  preprocessing.ipynb  prudence.ipynb  regions.ipynb
tests/: __init__.py  test_accessor.py  test_cmor.py  test_cordex.py  test_domain.py  test_preprocessing.py  test_regions.py  test_tables.py  test_transform.py  test_utils.py
