[metadata]
name = py-cordex
author = py-cordex Developers
author_email = lars.buntemeyer@hereon.de
license = MIT
description = creation of cordex grids
long_description_content_type=text/x-rst
long_description = See https://py-cordex.readthedocs.io
url = https://github.com/euro-cordex/py-cordex
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy >= 1.17
    pooch >= 1.0
    setuptools >= 40.4  # for pkg_resources
    xarray >= 0.15, != 2023.9.0
    cf-xarray >= 0.8
    pyproj >= 3.3.0

[tool:pytest]
python_files = test_*.py
testpaths = tests
filterwarnings =
    ignore:numpy.ufunc size changed, may indicate binary incompatibility.:RuntimeWarning

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    # module level import not at top of file
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build
    docs
    .git

[isort]
profile = black
skip_gitignore = true
force_to_top = true

[coverage:run]
omit =
    */tests/*
    */cordex/esgf_access.py
    */cordex/variable.py
    */cordex/cli.py
